[package]
name = "spdk-rs"
description = "Rust bindings for SPDK library"
version = "0.2.0"
edition = "2018"
build = "build.rs"
license = "Apache2"

[build-dependencies]
bindgen = "0.68.1"
cc = "1.0.83"
pkg-config = "0.3.27"

[dependencies]
async-trait = "0.1.73"
futures = "0.3.28"
nix = "0.27.1"
parking_lot = "0.12.1"
serde_json = "1.0.107"
snafu = "0.7.5"
tracing = "0.1.37"

[dependencies.serde]
features = ["derive"]
version = "1.0.188"

[dependencies.uuid]
features = ["v4"]
version = "1.4"
